--- a/index.html
+++ b/index.html
@@ -964,10 +964,12 @@
     </footer>
 
     <script type="module">
-  // Import the functions you need from the SDKs you need
 
+  <!-- Firebase App (core SDK) -->
 
-  // Your web app's Firebase configuration
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
   const firebaseConfig = {
     apiKey: "AIzaSyBy9UcDcoLOx8DvwX5LVecCN5moRvFjcpU",
     authDomain: "secretwax-4dbf0.firebaseapp.com",
@@ -978,16 +980,17 @@
     appId: "1:19692324028:web:06aa3ea5d2e368fb257cb9"
   };
 
+  // Initialize Firebase
+  const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  signInAnonymously(auth)
+    .then(() => console.log("Signed in anonymously"))
+    .catch((error) => console.error("Auth error:", error));
 
 
-  // Firebase imports (add these at the very top of the script, after opening <script> tag)
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-import { getFirestore, doc, getDoc, runTransaction } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
-import { getAuth, signInAnonymously } from "firebase/auth"; const auth = getAuth(); signInAnonymously(auth) .catch((error) => { console.error("Auth error:", error); });
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
 
 
 
