--- a/index.html
+++ b/index.html
@@ -804,6 +804,59 @@
     opacity: 0.6;
     cursor: not-allowed;
 }
+
+.hidden {
+    display: none !important;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    display: none;
+}
+
+.modal-overlay.active {
+    display: block;
+}
+.alert-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.95);
+    border: 3px solid #eab308;
+    padding: 40px;
+    z-index: 1001;
+    text-align: center;
+    box-shadow: 0 0 50px #eab308;
+    max-width: 600px;
+    width: 90%;
+    display: none;
+}
+
+.alert-popup.active {
+    display: block;
+}
+
+.alert-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    display: none;
+}
+
+.alert-overlay.active {
+    display: block;
+}
     </style>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
@@ -813,7 +866,16 @@
     <div class="glitch-overlay"></div>
     <div class="corruption-overlay"></div>
     <div class="threat-warning">⚠ SYSTEM THREAT DETECTED ⚠</div>
+  
     
+     <!-- Alert Popup (for messages) -->
+     <div id="alert-overlay" class="alert-overlay"></div>
+     <div id="alert-popup" class="alert-popup">
+         <h2 id="alert-title" style="color: #eab308; text-shadow: 0 0 10px #eab308; margin-bottom: 15px;">⚠ SYSTEM ALERT</h2>
+         <p id="alert-message" style="color: #fbbf24; margin-bottom: 20px; line-height: 1.6;"></p>
+         <button id="close-alert-btn" class="submit-btn">ACKNOWLEDGE</button>
+     </div>
+
     <div class="container">
         <header class="terminal-header">
             <h1>◈ SECRET CODE TERMINAL ◈</h1>
@@ -949,16 +1011,8 @@
     <p style="margin-top: 20px; color: var(--warning-orange);"><strong>Remember, operative: Speed and precision are essential. The network is watching.</strong></p>
     <button class="close-modal-btn" onclick="closeMissionBrief()">ACKNOWLEDGED</button>
 </div>
-
-    </div>
-    
-<!-- Alert Popup (for messages) -->
-<div id="alert-overlay" class="threat-overlay hidden"></div>
-<div id="alert-popup" class="threat-banner hidden">
-    <h2 id="alert-title" style="color: #eab308; text-shadow: 0 0 10px #eab308; margin-bottom: 15px;">⚠ SYSTEM ALERT</h2>
-    <p id="alert-message" style="color: #fbbf24; margin-bottom: 20px; line-height: 1.6;"></p>
-    <button id="close-alert-btn" class="btn btn-green">ACKNOWLEDGE</button>
-</div>
+     </div>
+ 
 
     <footer>
         <p style="margin-bottom: 15px;">POWERED BY THE WAXP BLOCKCHAIN NETWORK</p>
@@ -1023,8 +1077,6 @@ function loadState() {
     if (saved) {
         gameState = { ...gameState, ...JSON.parse(saved) };
     }
-
-    document.getElementById('close-alert-btn').addEventListener('click', closeAlert);
 }
 
 // Save state to localStorage
@@ -1036,18 +1088,18 @@ function saveState() {
 loadState();
 
 
-// ==================== ALERT POPUP ====================
-function showAlert(title, message) {
-            document.getElementById('alert-title').textContent = title;
-            document.getElementById('alert-message').textContent = message;
-            document.getElementById('alert-overlay').classList.remove('hidden');
-            document.getElementById('alert-popup').classList.remove('hidden');
-        }
 
-        function closeAlert() {
-            document.getElementById('alert-overlay').classList.add('hidden');
-            document.getElementById('alert-popup').classList.add('hidden');
-        }
+function showAlert(title, message) {
+    document.getElementById('alert-title').textContent = title;
+    document.getElementById('alert-message').textContent = message;
+    document.getElementById('alert-overlay').classList.add('active');
+    document.getElementById('alert-popup').classList.add('active');
+}
+
+function closeAlert() {
+    document.getElementById('alert-overlay').classList.remove('active');
+    document.getElementById('alert-popup').classList.remove('active');
+}
 
 // Matrix Background
 const canvas = document.getElementById('matrix-canvas');
@@ -1287,7 +1339,7 @@ document.getElementById('submit-code').addEventListener('click', async () => {
             // Check if already redeemed locally
             if (gameState.redeemedCodes.includes(code)) {
                 showAlert('⚠ CODE ALREADY REDEEMED', 'This code has already been processed by your terminal. Check your Log Book for details.');
-                ubmitBtn.disabled = false;
+                submitBtn.disabled = false;
                 submitBtn.textContent = 'DECRYPT & ACCESS';
                 return;
             }
@@ -1766,12 +1818,18 @@ updateNetworkMap();
 updateClues();
 updateCooldownDisplay();
 
+const closeAlertBtn = document.getElementById('close-alert-btn');
+    if (closeAlertBtn) {
+        closeAlertBtn.addEventListener('click', closeAlert);
+    }
+
 
 if (checkLockout()) {
     showLockout();
 }
 
 // Mission brief
+document.getElementById('close-alert-btn').addEventListener('click', closeAlert);
 document.getElementById('mission-brief').addEventListener('click', (e) => {
     e.preventDefault();
     document.getElementById('brief-overlay').classList.add('active');
